@@ -351,6 +351,4 @@ Volunteers for these and other projects are welcome!
 
 329*Have a Display Editor shortcut from the data popup menu.
 
-332 Have `Back' and `Forward' affect the current display, too.
-
-332 (Insert new project ideas here)
+333 (Insert new project ideas here)
